--- a/WebApplication2/appsettings.json
+++ b/WebApplication2/appsettings.json
@@ -1,4 +1,10 @@
 {
+
+  "ConnectionStrings": {
+
+    "DefaultConnection": "Server=DESKTOP-2S3J6QK; Database=WebApplication2; Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
